Test para Market.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,4 +79,13 @@
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/referer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/www"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"/>
+
 </LinearLayout>
